implemented 'break' and 'continue' statements for the (while/for)-loops. that required an additional jumping tool for the equivalent of 'goto's in java, which is what the new: 'BREAK_and_CONTINUE_abusing_exceptions' class was used for, with the abuse of throwing and catching java's 'RuntimeException' objects to gain instant control back to the loops running inside the looping-visitors. additionally, implementing 'continue' posed a detrimental complication to the sugared-parsing construction of the for-loop, and required more control which couldn't be implemented naturally using the previously desugared while-visitor alone, so I decoupled it into it's own AST-node with it's own visitor, and parsed it's entire node inside another Stmt.Block node, to separate it's scope-nested variable declarations from the outer Environment as a peoper for-loop should.
now finally moving to chapter 10.